Fix text wrapping issue in questions component

--- a/bibleduel-webapp/src/app/components/questions/questions.component.css
+++ b/bibleduel-webapp/src/app/components/questions/questions.component.css
@@ -53,6 +53,7 @@
     border-radius: 5px;
     padding: 0 12px 0 10px;
     width: fit-content;
+    text-wrap: normal;
 }
 
 .questionOption{
